--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 </div>
   
   <section>
-    <h1><font color="white">
-      NEW COLLECTION<br>
-      Spring/Summer 2016
-      </font>
+    <h1>
+      <div id:"new-collection">NEW COLLECTION</div><br>
+      <div id:"spring-summer">Spring/Summer 2016</div>
     </h1>
   </section>
 
@@ -78,9 +77,9 @@
      </p>
    </div>
 
-   <footer>2016 Aloha Apparel Co.<br>
+   <footer><p>2016 Aloha Apparel Co.<br>
    Powered by HTML and CSS.<br>
-   604-604-6040 info@alohaapparel.com<br>
+   604-604-6040 info@alohaapparel.com</p><br>
    <ul id="social-media">
      <li>Facebook</li>
      <li>Twitter</li>
