Sorted CSS bigtime, more formatting.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section>
     <h1>
       <div class="new-collection">NEW COLLECTION</div><br>
-      <div class="spring-summer">Spring/Summer 2016</div>
+      <div class="spring-summer">Spring/Summer 201<span class="the6">6</span></div>
     </h1>
   </section>
 
@@ -34,7 +34,7 @@
    
 
      <p>Aloha Apparel Co sells only the finest ready-to-travel clothing. 
-        Browse our <br> current selection of products or sign-up for updates now.
+        Browse our current selection of products or sign-up for updates now.
      </p>
 
      <ul class="categories">
@@ -74,6 +74,7 @@
        upcoming sales, and get free style tips from our blog. Unsubscribe at any time.
         </font>
      </p>
+     <form button>
    </div>
 
    <footer>
