Media query addition in progress

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <section>
   <h1>
-    <div class="new-collection">NEW COLLECTION</div><br>
-    <div class="spring-summer">Spring/Summer 2016</div>
+    <div class="new-collection">NEW COLLECTION</div>
+    <div class="spring-summer">Spring/Summer <span class="year">2016</span></div>
   </h1>
 </section>
 
@@ -91,22 +91,31 @@
 
 <footer>
   <div class="foot">
-    <p>2016 Aloha Apparel Co.<br>
-       Powered by HTML and CSS.<br>
-       604-604-6040 info@alohaapparel.com
-    </p><br>
+    <p>
+       <div class="info">2016 Aloha Apparel Co.</div>
+       <div class="info">Powered by HTML and CSS.</div>
+       <div class="info-pad">604-604-6040 info@alohaapparel.com</div>
+       <div class="info-grey">1490 W Broadway</div>
+       <div class="info-grey">Vancouver, BC, Canada</div>
+    </p>
  
   <ul class="social-media">
      <li>
-       <i class="fa fa-facebook-official" aria-hidden="true"></i>Facebook</li>
+      <a href="#"> <i class="fa fa-facebook-official" aria-hidden="true"></i>
+       <span class="social-text">Facebook</span></li>
      <li>
-       <i class="fa fa-twitter" aria-hidden="true"></i>Twitter</li>
+       <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>
+       <span class="social-text">Twitter</span></li></a>
      <li>
-       <i class="fa fa-instagram" aria-hidden="true"></i>Instagram</li>
+       <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
+       <span class="social-text">Instagram</span></li></a>
      <li>
-       <i class="fa fa-pinterest" aria-hidden="true"></i>Pinterest</li>
+       <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i>
+       <span class="social-text">Pinterest</span></li></a>
      <li>
-       <i class="fa fa-google-plus" aria-hidden="true"></i>Google+</li>
+       <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i>
+       <span class="social-text">Google+</span></li></a>
+
      </ul>
    </div>
 </footer>
