Fixed Borders in Shop Menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <section>
   <h1>
-    <div class="new-collection">NEW COLLECTION</div>
+    <div class="new-collection">New Collection</div>
     <div class="spring-summer">Spring/Summer <span class="year">2016</span></div>
   </h1>
 </section>
@@ -46,12 +46,12 @@
 
 
      <ul class="shop">
-       <li class="cat"><a href="">MEN'S</a></li>
-       <li class="cat"><a href="">TRENDS</a></li>
-       <li class="cat"><a href="">GLASSES</a></li>      
-       <li class="cat"><a href="">SALE</a></li>
-       <li class="cat"><a href="">BAGS</a></li>
-       <li class="cat"><a href="">WOMEN'S</a></li>
+       <li class="cat"><a href="">Men's</a></li>
+       <li class="cat"><a href="">Trend</a></li>
+       <li class="cat"><a href="">Glasses</a></li>      
+       <li class="cat"><a href="">Sale</a></li>
+       <li class="cat"><a href="">Bags</a></li>
+       <li class="cat"><a href="">Women's</a></li>
      </ul>
 
 
