--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
   <script src="lib/jquery-3.2.1.min.js"></script>
   <script src="flickity/flickity.pkgd.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="tota11y.min.js"></script>
 
 
 
