--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="nav-bar">
     <div id="logo"><img src="images\aloha-logo.svg" alt="aloha logo">
-     </div>
+    </div>
     <div class="nav">
       <ul>
         <li><a name="about-link" href="#about">About</a></li>
@@ -31,8 +31,8 @@
   </div>
 
 
-<div class="white-space">
-</div>
+  <div class="white-space">
+  </div>
 
 
   <section>
@@ -42,11 +42,11 @@
     </h1>
   </section>
 
-<div id="about">
-  <h2>
-    <span class="italic"> Hand-Crafted </span>
-    <span class="bold">Styles</span>
-  </h2>
+  <div id="about">
+    <h2>
+      <span class="italic"> Hand-Crafted </span>
+      <span class="bold">Styles</span>
+    </h2>
   </div>
 
 
@@ -64,89 +64,89 @@
     <li class="cat"><a href="">Women's</a></li>
   </ul>
 
-<div id="featured">
-  <h2>
-    <span class="italic">Most-Loved </span>
-    <span class="bold">Products</span>
-  </h2>
+  <div id="featured">
+    <h2>
+      <span class="italic">Most-Loved </span>
+      <span class="bold">Products</span>
+    </h2>
 
 
 
-  <ul class="main-carousel">
-    <li>
-      <a href=""> <img src="images\checked-stretch-dress.jpg" alt="checked stretch dress">
+    <ul class="main-carousel">
+      <li>
+        <a href=""> <img src="images\checked-stretch-dress.jpg" alt="checked stretch dress">
         <div class="grey-text">Dresses</div>
         <div class="product-name">Checked Stretch Dress</div>
         <div class="price">$129.00
         </div>
       </a>
-    </li>
+      </li>
 
 
-    <li>
-      <a href=""><img src="images\blue-hipster-backpack.jpg" alt="blue hipster backpack">
+      <li>
+        <a href=""><img src="images\blue-hipster-backpack.jpg" alt="blue hipster backpack">
         <div class="grey-text">Bags</div>
         <div class="product-name">Blue Hipster Backpack</div>
         <div class="price">$129.00
         </div>
       </a>
-    </li>
+      </li>
 
-    <li>
-      <a href=""><img src="images\demin-overall-shorts.jpg" alt="denim overall shorts">
+      <li>
+        <a href=""><img src="images\demin-overall-shorts.jpg" alt="denim overall shorts">
         <div class="grey-text">Denim</div>
         <div class="product-name">Blue Hipster Backpack</div>
         <div class="price">$129.00
         </div>
       </a>
-    </li>
+      </li>
 
-    <li>
-      <a href=""><img src="images\pink-dotted-dress.jpg" alt="pink dotted dress">
+      <li>
+        <a href=""><img src="images\pink-dotted-dress.jpg" alt="pink dotted dress">
         <div class="grey-text">Dresses</div>
         <div class="product-name">Pink Dotted Dress</div>
         <div class="price">$129.00
         </div>
       </a>
-    </li>
+      </li>
 
-    <li>
-      <a href=""><img src="images\blue-silk-dress.jpg" alt="blue silk dress">
+      <li>
+        <a href=""><img src="images\blue-silk-dress.jpg" alt="blue silk dress">
         <div class="grey-text">Dresses</div>
         <div class="product-name">Blue Silk Dress</div>
         <div class="price">$129.00
         </div>
       </a>
-    </li>
+      </li>
 
-    <li>
-      <a href=""><img src="images\cotton-blue-shirt.jpg" alt="cotton blue shirt">
+      <li>
+        <a href=""><img src="images\cotton-blue-shirt.jpg" alt="cotton blue shirt">
         <div class="grey-text">Shirts</div>
         <div class="product-name">Cotton Blue Shirt</div>
         <div class="price">$129.00
         </div>
       </a>
-    </li>
+      </li>
 
-    <li>
-      <a href=""><img src="images\cotton-yellow-tshirt.jpg" alt="cotton yellow tshirt">
+      <li>
+        <a href=""><img src="images\cotton-yellow-tshirt.jpg" alt="cotton yellow tshirt">
         <div class="grey-text">Shirts</div>
         <div class="product-name">Cotton Yellow Shirt</div>
         <div class="price">$129.00
         </div>
       </a>
-    </li>
+      </li>
 
-    <li>
-      <a href=""><img src="images\stretch-knit-dress.jpg" alt="stretch knit dress">
+      <li>
+        <a href=""><img src="images\stretch-knit-dress.jpg" alt="stretch knit dress">
         <div class="grey-text">Dresses</div>
         <div class="product-name">Cotton Yellow Shirt</div>
         <div class="price">$129.00
         </div>
       </a>
-    </li>
-  </ul>
-</div>
+      </li>
+    </ul>
+  </div>
 
 
   <div id="updates">
@@ -170,30 +170,30 @@
 
   <footer>
     <div class="foot">
-      <p>
+      <div>
         <div class="info">©2016 Aloha Apparel Co.</div>
         <div class="info">Powered by HTML and CSS.</div>
         <div class="info-pad">604-604-6040 info@alohaapparel.com</div>
         <div class="info-grey">1490 W Broadway</div>
         <div class="info-grey">Vancouver, BC, Canada</div>
-      </p>
+      </div>
 
       <ul class="social-media">
         <li>
           <a href="#"> <i class="fa fa-facebook-official" aria-hidden="true"></i>
             <span class="social-text">Facebook</span></li>
         </a>
-        <li>
-          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>
-       <span class="social-text">Twitter</span></li></a>
           <li>
-            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
-       <span class="social-text">Instagram</span></li></a>
+            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>
+       <span class="social-text">Twitter</span></li></a>
             <li>
-              <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i>
-       <span class="social-text">Pinterest</span></li></a>
+              <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>
+       <span class="social-text">Instagram</span></li></a>
               <li>
-                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i>
+                <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i>
+       <span class="social-text">Pinterest</span></li></a>
+                <li>
+                  <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i>
        <span class="social-text">Google+</span></li></a>
 
       </ul>
@@ -201,11 +201,11 @@
   </footer>
 
 
-
+  <script src="./JS/tota11y.min.js"></script>
   <script src="lib/jquery-3.2.1.min.js"></script>
   <script src="flickity/flickity.pkgd.min.js"></script>
   <script src="js/main.js"></script>
-  <script src="tota11y.min.js"></script>
+
 
 
 
