--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
 
-
   <div class="nav-bar">
     <div id="logo"><img src="images\aloha-logo.svg" alt="aloha logo">
     </div>
@@ -30,10 +29,8 @@
     </div>
   </div>
 
-
   <div class="white-space">
   </div>
-
 
   <section>
     <h1>
@@ -103,10 +100,9 @@
 
       <li>
         <a href=""><img src="images\pink-dotted-dress.jpg" alt="pink dotted dress">
-        <div class="grey-text">Dresses</div>
-        <div class="product-name">Pink Dotted Dress</div>
-        <div class="price">$129.00
-        </div>
+          <div class="grey-text">Dresses</div>
+          <div class="product-name">Pink Dotted Dress</div>
+          <div class="price">$129.00</div>
       </a>
       </li>
 
