Rectified Div-itis eliminated half of divs in lieu of other tags

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <ul class="main-carousel">
       <li>
         <a href=""> <img src="images\checked-stretch-dress.jpg" alt="checked stretch dress">
-        <div class="grey-text">Dresses</div>
-        <div class="product-name">Checked Stretch Dress</div>
+        <h4 class="grey-text">Dresses</h4>
+        <h5 class="product-name">Checked Stretch Dress</h5>
         <div class="price">$129.00
         </div>
       </a>
@@ -82,63 +82,57 @@
 
       <li>
         <a href=""><img src="images\blue-hipster-backpack.jpg" alt="blue hipster backpack">
-        <div class="grey-text">Bags</div>
-        <div class="product-name">Blue Hipster Backpack</div>
-        <div class="price">$129.00
-        </div>
+        <h4 class="grey-text">Bags</h4>
+        <h5 class="product-name">Blue Hipster Backpack</h5>
+        <div class="price">$129.00</div>
       </a>
       </li>
 
       <li>
         <a href=""><img src="images\demin-overall-shorts.jpg" alt="denim overall shorts">
-        <div class="grey-text">Denim</div>
-        <div class="product-name">Blue Hipster Backpack</div>
-        <div class="price">$129.00
-        </div>
+        <h4 class="grey-text">Denim</h4>
+        <h5 class="product-name">Blue Hipster Backpack</h5>
+        <div class="price">$129.00</div>
       </a>
       </li>
 
       <li>
         <a href=""><img src="images\pink-dotted-dress.jpg" alt="pink dotted dress">
-          <div class="grey-text">Dresses</div>
-          <div class="product-name">Pink Dotted Dress</div>
+          <h4 class="grey-text">Dresses</h4>
+          <h5 class="product-name">Pink Dotted Dress</h5>
           <div class="price">$129.00</div>
       </a>
       </li>
 
       <li>
         <a href=""><img src="images\blue-silk-dress.jpg" alt="blue silk dress">
-        <div class="grey-text">Dresses</div>
-        <div class="product-name">Blue Silk Dress</div>
-        <div class="price">$129.00
-        </div>
+        <h4 class="grey-text">Dresses</h4>
+        <h5 class="product-name">Blue Silk Dress</h5>
+        <div class="price">$129.00</div>
       </a>
       </li>
 
       <li>
         <a href=""><img src="images\cotton-blue-shirt.jpg" alt="cotton blue shirt">
-        <div class="grey-text">Shirts</div>
-        <div class="product-name">Cotton Blue Shirt</div>
-        <div class="price">$129.00
-        </div>
+        <h4 class="grey-text">Shirts</h4>
+        <h5 class="product-name">Cotton Blue Shirt</h5>
+        <div class="price">$129.00</div>
       </a>
       </li>
 
       <li>
         <a href=""><img src="images\cotton-yellow-tshirt.jpg" alt="cotton yellow tshirt">
-        <div class="grey-text">Shirts</div>
-        <div class="product-name">Cotton Yellow Shirt</div>
-        <div class="price">$129.00
-        </div>
+        <h4 class="grey-text">Shirts</h4>
+        <h5 class="product-name">Cotton Yellow Shirt</h5>
+        <div class="price">$129.00</div>
       </a>
       </li>
 
       <li>
         <a href=""><img src="images\stretch-knit-dress.jpg" alt="stretch knit dress">
-        <div class="grey-text">Dresses</div>
-        <div class="product-name">Cotton Yellow Shirt</div>
-        <div class="price">$129.00
-        </div>
+        <h4 class="grey-text">Dresses</h4>
+        <h5 class="product-name">Cotton Yellow Shirt</h5>
+        <div class="price">$129.00</div>
       </a>
       </li>
     </ul>
