--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   </footer>
 
 
-  <script src="./JS/tota11y.min.js"></script>
+  <script src="./js/tota11y.min.js"></script>
   <script src="lib/jquery-3.2.1.min.js"></script>
   <script src="flickity/flickity.pkgd.min.js"></script>
   <script src="js/main.js"></script>
